--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -60,124 +60,31 @@ h2 {
 .images {
    background-color: #fff;
    margin: 0 auto;
-   position: relative;
-   max-height: 20%;
+   overflow: auto;
+
 }
 
-
-.images1 {
-    margin: 30px 10px 40px 400px; 
-}
-
-.images2 {
-   margin: 40px 10px 70px 400px;
-}
-
-.images3 {
-   position: absolute;
-   bottom: 500px;
-   left: 40px;
-   /*position:relative;
-   bottom: 630px;
-   left: 40px; */
-}
-
-.images4 {
-   position: absolute;
-   bottom: 270px;
-   left: 40px;
-   /*bottom: 550px;
-   left: 40px; */
-}
-
-.images5 {
-   position: absolute;
-   bottom: 40px;
-   left: 40px;
-}
-   /* bottom: 450px;
-   left: 40px; */
-
-
-
-.title1{
-   background-color: #4aaaa5;
+h3 {
+   background-color: teal;
    color: white;
-   font-family: 'Georgia', Times, Times New Roman, serif;
-   text-align: center;
-   padding: 10px;
-   position: relative;
-   z-index:1;
-   width: 180px;
-   top: 180px;
-   left: 40px;
-}
-
-.title2{
-   background-color: #4aaaa5;
-   color: white;
-   font-family: 'Georgia', Times, Times New Roman, serif;
-   text-align: center;
-   padding: 10px;
-   position: relative;
-   z-index:1;
-   width: 180px;
-   top: 100px;
-   left: 40px;
-}
-
-
-.title3{
-   background-color: #4aaaa5;
-   color: white;
-   font-family: 'Georgia', Times, Times New Roman, serif;
-   text-align: center;
-   padding: 10px;
-   position: relative;
-   z-index:1;
-   width: 180px;
-   top: -10px;
-   left: 40px;
-}
-
-.title4{
-   background-color: #4aaaa5;
-   color: white;
-   font-family: 'Georgia', Times, Times New Roman, serif;
-   text-align: center;
-   padding: 10px;
-   position: relative;
-   z-index:1;
-   width: 180px;
-   top: -700px;
-   left: 400px;
-}
-
-.title5{
-   background-color: #4aaaa5;
-   color: white;
-   font-family: 'Georgia', Times, Times New Roman, serif;
    text-align: center;
    padding: 10px;
    position: absolute;
-   z-index:1;
-   width: 180px;
-   top: 340px;
-   /*top: -650px;*/
-   left: 400px;
+   margin-top: 120px;
 }
 
-#above {
-   background-color:#4aaaa5;
-   height:10px;
-   left:0;
-   bottom:50px;
-   
+#image1, #image2, #image3, #image4, #image5{
+   float: left;
+   margin: 20px;
 }
-#footer{
+
+
+
+footer{
    background-color: #cccccc;
    text-align:center;
    padding: 20px;
    width: 100%;
    bottom:0;
+   border-top: 5px solid #4aaaa5;
 }
