--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,18 +66,13 @@ img {
     margin: 20px;
 }
 
-#above {
-    background-color:#4aaaa5;
-    height:10px;
-    left:0;
-    bottom:50px;
     
- }
- #footer{
+ footer{
     background-color: #cccccc;
     text-align:center;
     padding: 20px;
     width: 100%;
     bottom:0;
+    border-top: 5px solid #4aaaa5;
  }
  
