--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -92,18 +92,12 @@ h2 {
    width: 100px;
 }
 
-#above {
-   background-color:#4aaaa5;
-   height:10px;
-   left:0;
-   bottom:50px;
-   
-}
-#footer{
+
+footer{
    background-color: #cccccc;
    text-align:center;
    padding: 20px;
    width: 100%;
    bottom:0;
+   border-top: 5px solid #4aaaa5;
 }
-
