--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,11 @@
 }
 
 #nav2 {
-    background-color: white;
+    background-color: #fff;
     word-spacing: 8px;
     height: 30px;
     padding:8px;
-    color: white;
+    color: #777777;
     position: absolute;
     left: 60%;
 }
@@ -46,8 +46,8 @@
     clear:both;
     background-color: #fff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    width:50%;
-    height:50%;
+    width: 960px;
+    box-sizing: border-box;
     margin:auto;
     padding: 20px;
     line-height:25px;
@@ -72,6 +72,7 @@ img {
     text-align:center;
     padding: 20px;
     width: 100%;
+    position: absolute;
     bottom:0;
     border-top: 5px solid #4aaaa5;
  }
