--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,36 +12,31 @@
     background-color:#fff;
     padding: 10px;
     border: 1px solid;
-    height: 40px;
-    
+    width: 100%;
 
 }
-
 #nav2 {
-    background-color: #fff;
-    word-spacing: 8px;
+    background-color: white;
+    word-spacing: 20px;
     height: 30px;
     padding:8px;
-    color: #777777;
-    position: absolute;
-    left: 60%;
-}
-
-#name {
+    color: white;
+    position: relative;
+    left: 68%;
+ }
+ 
+ header {
     background-color: #4aaaa5;
     color: #777777;
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-size: 2em;
-    float: left;
-    padding:20px;
+    border: #cccccc;
+    padding: 15px;
     width: 250px;
-    height:20px;
-    color: white;
-    position: relative;
-    left: 25%;
-    bottom: 10%;
-}
-
+    color: #fff;
+    position: absolute;
+    left: 250px;
+ }
 #div1 {
     clear:both;
     background-color: #fff;
