--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,5 +1,4 @@
-
-* {
+ * {
     padding: 0;
     margin: 0;
    
@@ -13,69 +12,44 @@ body {
    background-color:#fff;
    padding: 10px;
    border: 1px solid;
-   height: 40px;
-   
-
+   /* height: 40px;*/
+   width: 100%;
 }
 
 #nav2 {
    background-color: white;
-   word-spacing: 8px;
+   word-spacing: 20px;
    height: 30px;
    padding:8px;
    color: white;
-   position: absolute;
-   left: 60%;
+   position: relative;
+   left: 68%;
 }
 
-#name {
+header {
    background-color: #4aaaa5;
    color: #777777;
    font-family: 'Georgia', Times, Times New Roman, serif;
    font-size: 2em;
-   float: left;
-   padding:20px;
+   border: #cccccc;
+   padding: 15px;
    width: 250px;
-   height:20px;
-   color: white;
-   position: relative;
-   left: 25%;
-   bottom: 10%;
+   color: #fff;
+   position: absolute;
+   left: 250px;
 }
 
-#contact{
-   clear:both;
+#div1 {
    background-color: #fff;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    width: 960px;
    box-sizing: border-box;
    margin:auto;
-   padding: 30px;
-   line-height:25px;
+   padding: 20px;
    border: 1px solid;
-   margin-top: 30px;
+   margin-top: 60px;
    position: relative;
-   
 }
-
-.contact-name {
-   width: 100%;
-   padding: 5px
-   
-}
-
-.contact-email {
-   width: 100%;
-   padding: 5px;
-   
-}
-
-.contact-msg {
-   height: 300px;
-   width: 100%;
-   
-}
-
 
 h2 {
    color:#4aaaa5;
@@ -84,12 +58,26 @@ h2 {
 }
 
 
-#button{
-   background-color: #4aaaa5;
-   color:white;
+h3 {
+   background-color: teal;
+   color: white;
+   text-align: center;
    padding: 10px;
-   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-   width: 100px;
+   position: absolute;
+   margin-top: 120px;
+}
+
+.images {
+   float:left;
+   width: 33.3%;
+   padding: 5px;
+   margin:20px;
+}
+
+.images-container::after {
+   content: "";
+   clear:both;
+   display: table;
 }
 
 
