--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -36,7 +36,7 @@ header {
    width: 250px;
    color: #fff;
    position: absolute;
-   left: 250px;
+   left: 300px;
 }
 
 #div1 {
@@ -47,7 +47,7 @@ header {
    margin:auto;
    padding: 20px;
    border: 1px solid;
-   margin-top: 60px;
+   margin-top: 30px;
    position: relative;
 }
 
@@ -60,7 +60,7 @@ h2 {
 
 h3 {
    background-color: teal;
-   color: white;
+   color: #fff;
    text-align: center;
    padding: 10px;
    position: absolute;
