--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,11 @@
 
 }
 #nav2 {
-    background-color: white;
+    background-color: #fff;
     word-spacing: 20px;
     height: 30px;
     padding:8px;
-    color: white;
+    color: #fff;
     position: relative;
     left: 68%;
  }
@@ -38,7 +38,6 @@
     left: 300px;
  }
 #div1 {
-    clear:both;
     background-color: #fff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     width: 960px;
