--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -46,7 +46,7 @@ header {
    box-sizing: border-box;
    margin:auto;
    padding: 20px;
-   border: 1px solid;
+   border: 1px solid #dddddd;
    margin-top: 30px;
    position: relative;
 }
