--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -43,7 +43,6 @@ header {
    
 
 #contact{
-   clear:both;
    background-color: #fff;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    width: 960px;
@@ -51,9 +50,10 @@ header {
    margin:auto;
    padding: 30px;
    line-height:25px;
-   border: 1px solid;
+   border: 1px solid #dddddd;
    margin-top: 30px;
    position: relative;
+   color: #777777;
    
 }
 
@@ -97,6 +97,6 @@ footer{
    text-align:center;
    padding: 20px;
    width: 100%;
-   bottom:0;
+   bottom: 0;
    border-top: 5px solid #4aaaa5;
 }
