--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,18 +9,18 @@
 }
 
 #nav-container {
-    background-color:#fff;
+    background-color:#ffffff;
     padding: 10px;
     border: 1px solid;
     width: 100%;
 
 }
 #nav2 {
-    background-color: #fff;
+    background-color: #ffffff;
     word-spacing: 20px;
     height: 30px;
     padding:8px;
-    color: #fff;
+    color: #ffffff;
     position: relative;
     left: 68%;
  }
@@ -33,12 +33,12 @@
     border: #cccccc;
     padding: 15px;
     width: 250px;
-    color: #fff;
+    color: #ffffff;
     position: absolute;
     left: 300px;
  }
 #div1 {
-    background-color: #fff;
+    background-color: #ffffff;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     width: 960px;
     box-sizing: border-box;
@@ -63,12 +63,12 @@ img {
 
     
  footer{
-    background-color: #cccccc;
+    background-color: #666666;
     text-align:center;
     padding: 20px;
     width: 100%;
     position: absolute;
     bottom:0;
-    border-top: 5px solid #4aaaa5;
+    border-top: 8px solid #4aaaa5;
  }
  
