--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -9,7 +9,7 @@ body {
 }
 
 #nav-container {
-   background-color:#fff;
+   background-color:#ffffff;
    padding: 10px;
    border: 1px solid;
    /* height: 40px;*/
@@ -17,11 +17,11 @@ body {
 }
 
 #nav2 {
-   background-color: #fff;
+   background-color: #ffffff;
    word-spacing: 20px;
    height: 30px;
    padding:8px;
-   color: #fff;
+   color: #ffffff;
    position: relative;
    left: 68%;
 }
@@ -34,13 +34,13 @@ header {
    border: #cccccc;
    padding: 15px;
    width: 250px;
-   color: #fff;
+   color: #ffffff;
    position: absolute;
    left: 300px;
 }
 
 #div1 {
-   background-color: #fff;
+   background-color: #ffffff;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    width: 960px;
    box-sizing: border-box;
@@ -60,7 +60,7 @@ h2 {
 
 h3 {
    background-color: teal;
-   color: #fff;
+   color: #ffffff;
    text-align: center;
    padding: 10px;
    position: absolute;
@@ -82,10 +82,10 @@ h3 {
 
 
 footer{
-   background-color: #cccccc;
+   background-color: #666666;
    text-align:center;
    padding: 20px;
    width: 100%;
    bottom:0;
-   border-top: 5px solid #4aaaa5;
+   border-top: 8px solid #4aaaa5;
 }
