--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@
     border: 1px solid #dddddd;
     margin-top: 30px;
     color: #777777;
+
 }
 
 h2 {
@@ -61,14 +62,17 @@ img {
     margin: 20px;
 }
 
-    
- footer{
+#push {
+
+}
+
+
+ footer {
     background-color: #666666;
     text-align:center;
     padding: 20px;
     width: 100%;
-    position: absolute;
-    bottom:0;
+    margin-top:100px;
     border-top: 8px solid #4aaaa5;
  }
  
