--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@
 #nav2 {
     background-color: #ffffff;
     word-spacing: 20px;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     height: 30px;
     padding:8px;
     color: #ffffff;
@@ -39,7 +40,7 @@
  }
 #div1 {
     background-color: #ffffff;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Georgia', Times, Times New Roman, serif;
     width: 960px;
     box-sizing: border-box;
     margin:auto;
@@ -62,14 +63,13 @@ img {
     margin: 20px;
 }
 
-#push {
-
-}
 
 
  footer {
+    clear: left;
     background-color: #666666;
     text-align:center;
+    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     padding: 20px;
     width: 100%;
     margin-top:100px;
