--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -18,6 +18,7 @@ body {
 
 #nav2 {
    background-color: #ffffff;
+   font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    word-spacing: 20px;
    height: 30px;
    padding:8px;
@@ -62,6 +63,7 @@ h3 {
    background-color: teal;
    color: #ffffff;
    text-align: center;
+   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    padding: 10px;
    position: absolute;
    margin-top: 120px;
