--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -10,7 +10,7 @@ body {
 }
 
 #nav-container {
-   background-color:#fff;
+   background-color:#ffffff;
    padding: 10px;
    border: 1px solid;
    width: 100%;
@@ -19,7 +19,8 @@ body {
 }
 
 #nav2 {
-   background-color: #fff;
+   background-color: #ffffff;
+   font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    word-spacing: 20px;
    height: 30px;
    padding:8px;
