--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -85,6 +85,7 @@ h3 {
 
 footer{
    background-color: #666666;
+   font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    text-align:center;
    padding: 20px;
    width: 100%;
