trying to fix pic rotation

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -60,7 +60,7 @@ h2 {
 
 
 h3 {
-   background-color: teal;
+   background-color: #4aaaa5;
    color: #ffffff;
    text-align: center;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -78,7 +78,7 @@ h3 {
 
 .images-container::after {
    content: "";
-   clear:both;
+   clear: both;
    display: table;
 }
 
@@ -86,9 +86,9 @@ h3 {
 footer{
    background-color: #666666;
    font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-   text-align:center;
+   text-align: center;
    padding: 20px;
    width: 100%;
-   bottom:0;
+   bottom: 0;
    border-top: 8px solid #4aaaa5;
 }
