--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -18,13 +18,13 @@ body {
 
 #nav2 {
    background-color: #ffffff;
-   font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
    word-spacing: 20px;
-   height: 30px;
-   padding:8px;
+   font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+   width: 250px;
+   padding: 15px;
    color: #ffffff;
    position: relative;
-   left: 68%;
+   left: 1000px;
 }
 
 header {
