fixing footer on index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,8 @@
     border: 1px solid #dddddd;
     margin-top: 30px;
     color: #777777;
-
+    min-height: 100%;
+    margin-bottom: -50px;
 }
 
 h2 {
@@ -72,7 +73,8 @@ img {
     font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     padding: 20px;
     width: 100%;
-    margin-top:100px;
+    position: absolute;
+    bottom:0; 
     border-top: 8px solid #4aaaa5;
  }
  
